fix overflow-x on moble

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.App{
+  overflow-x: hidden;
+}
+
 .button-show{
   padding: 15px 30px;
   font-size: 14px;
